<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:padding="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_phoneID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFD600"
        android:gravity="center|center_vertical"
        android:hint="@string/enter_your_phone_number_here"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="8dp"
        android:text="@string/defaultPhoneNumber" />
    <TextView
        android:id="@+id/errorText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/error_in_number_entered"
        android:textColor="#D32F2F"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="#000000"
        app:backgroundTint="#376E12">

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pauseBtn"
        android:text="Pause"/>

    <ProgressBar
        android:id="@+id/pgBar_Progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        android:indeterminate="false"
        android:progress="0"
        />
    <TextView
        android:id="@+id/txt_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_initialText"
        android:textSize="24sp"
        app:autoSizeMaxTextSize="34sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/txt_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results">

    </TextView>

</ScrollView>

</LinearLayout>