<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity_take2"
    android:padding="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_phoneID2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F8E591"
        android:gravity="center|center_vertical"
        android:hint="@string/enter_your_phone_number_here"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="8dp"
        android:text="@string/defaultPhoneNumber" />
    <TextView
        android:id="@+id/errorText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/error_in_number_entered"
        android:textColor="#D32F2F"
        android:visibility="visible" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Start"
        android:textColor="#000000"
        app:backgroundTint="#7FD883"
        android:id="@+id/btn_start2">

    </Button>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/pgBar_Progress_bar2"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/txt_results2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:text="Results">

    </TextView>

</ScrollView>

</LinearLayout>