<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Background"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:id="@+id/lbl_startText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    >
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/layout_IntegralText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/settings_int1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded_corner"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/integral_1" />



                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_IntegralText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/settings_int2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded_corner"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/integral_2" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_IntegralText3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/settings_int3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded_corner"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/integral_3" />


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_start2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/start" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/layout_Integral1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <NumberPicker
                            android:id="@+id/integral1_start"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_corner"
                            android:padding="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_Integral2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <NumberPicker
                            android:id="@+id/integral2_start"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_corner"
                            android:padding="5dp">

                        </NumberPicker>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_Integral3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <NumberPicker
                            android:id="@+id/integral3_start"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_corner"
                            android:padding="5dp">

                        </NumberPicker>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_StartIntegrals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/lbl_end2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/end" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/layout_Integral1_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:layout_weight="1">


                        <NumberPicker
                            android:id="@+id/integral1_end"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:background="@drawable/rounded_corner">

                        </NumberPicker>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_Integral2_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <NumberPicker
                            android:id="@+id/integral2_end"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:background="@drawable/rounded_corner">

                        </NumberPicker>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_Integral3_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="5dp">
                        <NumberPicker
                            android:id="@+id/integral3_end"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:background="@drawable/rounded_corner">

                        </NumberPicker>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:paddingBottom="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/settings_cpuCnt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Drawable_buttons"
                        android:gravity="center"
                        android:text="CPU Count"
                        android:textSize="28sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="4"
                    android:orientation="horizontal"
                    android:background="@color/Drawable_buttons">

                    <RadioGroup
                        android:id="@+id/cpu_cnt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|fill|center_vertical"
                        android:gravity="center|center_horizontal"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/cpu_cnt_Single"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="One"
                            android:textSize="24sp"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/cpu_cnt_half"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="Half"
                            android:textSize="24sp"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/cpu_cnt_all_minus1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="All-1"
                            android:textSize="24sp"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/cpu_cnt_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/all"
                            android:textColor="#D32F2F"
                            android:textSize="24sp"
                            android:layout_weight="1"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/Background"
            android:paddingTop="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/settings_stopOnSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Drawable_buttons"
                    android:gravity="center"
                    android:text="Stop on First Success"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Drawable_buttons">
                    <RadioGroup
                        android:id="@+id/stopOnSuccess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="4"
                        >

                        <RadioButton
                            android:id="@+id/stopOnSuccess_Yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/yes"
                            android:textSize="24sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <RadioButton
                            android:id="@+id/stopOnSuccess_No"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/no"
                            android:textSize="24sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center"/>

                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>